--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -26,4 +26,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: renfis/pict:latest
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            renfis/pict:latest
+            renfis/pict:3.7.4
