Fix dependabot configuration
Problem:
The dependabot config was invalid and we got the error message
"Top level entity must be an Object, not a Array"

Solution:
Adjust the config file to conform with Dependabot's specification.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,10 @@
-- package-ecosystem: "docker"
-  schedule:
-    interval: "daily"
-    time: "12:00"
-    timezone: "Europe/Berlin"
-  pull-request-branch-name:
-    separator: "_"
+version: 2
+updates:
+  - package-ecosystem: "docker"
+    directory: "/"
+    schedule:
+      interval: "daily"
+      time: "12:00"
+      timezone: "Europe/Berlin"
+    pull-request-branch-name:
+      separator: "_"
