--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - 'main'
 
+env:
+  TEST_TAG: image-test
+  PICT_VERSION: 3.7.4
+
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -25,8 +29,19 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v3
         with:
+          load: true
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ env.TEST_TAG }}
+      -
+        name: Test image runs pict
+        # If the string is not found in the output grep will exit with error status
+        run: |
+          docker run --rm ${{ env.TEST_TAG }} pict | grep "ERROR Pairwise Independent Combinatorial Testing ERROR"
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
             renfis/pict:latest
-            renfis/pict:3.7.4
+            renfis/pict:${{ env.PICT_VERSION }}
