Adjust GitHub Action to build every branch but push only main
Problem:
We want to build an test all branches. Only the main branch should be
published to the Docker Hub.

Solution:
Remove branch directive on push. Add conditional to push step.

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,9 +1,6 @@
 name: ci
 
-on:
-  push:
-    branches:
-      - 'main'
+on: push
 
 env:
   TEST_TAG: image-test
@@ -36,7 +33,9 @@ jobs:
         # If the string is not found in the output grep will exit with error status
         run: |
           docker run --rm ${{ env.TEST_TAG }} pict | grep "Pairwise Independent Combinatorial Testing"
-      - name: Build and push
+      -
+        name: Build and push main
+        if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v3
         with:
           push: true
