Use pict to generate test cases
Problem:
We want to execute Microsoft PICT to generate the test cases.

Solution:
Call pict in the PictProcessor to generate the result.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 quarkus.http.enable-compression=true
 quarkus.http.access-log.enabled=true
 quarkus.http.access-log.pattern=combined
+
+pict.executable.path=/usr/local/bin/pict
