--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,15 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-      time: "12:00"
+      time: "08:00"
+      timezone: "Europe/Berlin"
+    pull-request-branch-name:
+      separator: "_"
+  - package-ecosystem: "maven"
+    directory: "/"
+    schedule:
+      interval: "daily"
+      time: "08:00"
       timezone: "Europe/Berlin"
     pull-request-branch-name:
       separator: "_"
